--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/radu.png" alt="radu profile picture"></td>
+      <td><img src="Images/radu.png" alt="radu profile picture"></td>
       <td>
         <h1>Radu Stefan Codreanu</h1>
         <p><em>Student at <strong><a href="https://unibuc.ro/">Univeristy of Bucharest</a></strong></em></p>
